# cv-screening

./: Dockerfile  README.md  config.py  gui.py  pyproject.toml  requirements.txt
