[tool.poetry]
name = "CV Screening"
version = "0.0.1"
description = "CV Screening"
readme = "README.md"
authors = ["Jakob Kristensen <jakob@jakobk.dk>"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "~3.11"
python-decouple = "*"
openai = "*"
pydantic = "*"
langchain = "*"
streamlit = "*"

[tool.poetry.extras]
uvicorn = ["standard"]
